--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -33,6 +33,19 @@
         </div>
       </h2>
 
+      <div class="pull-right" id="sorting-buttons">
+        <p>Sort by: </p>
+        <form method="get" class="form-inline">
+          <div class="btn-group" role="group">
+            <input type="hidden" name="search" value="<%= @search_term %>">
+            <button type="submit" class="btn btn-default" name="sort" value="r">rating</button>
+            <button type="submit" class="btn btn-default" name="sort" value="t">trending</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="clearfix"></div>
+
       <ul class="list-inline list-recipes">
         <% @recipes.each do |recipe| %>
         <li class="list-recipes-item">
