--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
       <div class="col-md-4">
         <div>
           <p>Source code at <a href="http://github.com/pwdd/recipe_finder">Github</a></p>
+          <p><small><em>PS: Sorting only works before searching; this is also what happens at F2F (API source) website.</em></small></p>
         </div>
       </div>
     </div>
