add color to prev next buttons

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -69,11 +69,9 @@
 
 .ranking {
   text-align: center;
-  padding-top: 19px;
+  padding: 13px;
   border: 3px solid #B80000;
-  border-radius: 50%;
-  width: 70px;
-  height: 70px;
+  border-radius: 15px;
   color: #B80000;
   margin-top: 60px;
   display: none;
