--- a/app/views/recipes/_pagination.html.erb
+++ b/app/views/recipes/_pagination.html.erb
@@ -3,10 +3,10 @@
     <input type="hidden" name="search" value="<%= @search_term %>">
     <input type="hidden" name="sort" value="<%= @search_sort %>">
     <% if pagination_prev.to_i >= 1 %>
-    <button type="submit" class="btn btn-default" name="page" value="<%= pagination_prev %>">previous</button>
+    <button type="submit" class="btn btn-primary" name="page" value="<%= pagination_prev %>">previous</button>
     <% end %>
     <% if @recipes.size != 0 %>
-    <button type="submit" class="btn btn-default" name="page" value="<%= pagination_next %>">next</button>
+    <button type="submit" class="btn btn-success" name="page" value="<%= pagination_next %>">next</button>
     <% end %>
   </div>
 </form>
